--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 __pycache__
 
 core/__pycache__
-core/migrations/__pycache__/*
-faculty_site/__pycache__/*
+core/migrations/__pycache__
+faculty_site/__pycache__
 #db.sqlite3
 media
 
