--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-ckeditor-5==0.2.13
 django-js-asset==2.2.0
 django-mptt==0.16.0
 django-mptt-admin==2.6.2
+djangorestframework==3.15.1
 pillow==10.3.0
 sqlparse==0.5.0
 typing_extensions==4.11.0
